--- a/css/guiainsdustrial.css
+++ b/css/guiainsdustrial.css
@@ -6,11 +6,16 @@
         font-size: 16px;
     }
 
+    textarea,
     input,
     input:focus,
     input:active {
         outline: none !important;
         padding-left: 0.5rem !important;
+    }
+
+    textarea {
+        padding-top: 0.35rem;
     }
     
     h1,
